--- a/.github/workflows/spacexapp-workflow.yml
+++ b/.github/workflows/spacexapp-workflow.yml
@@ -27,7 +27,7 @@ jobs:
         run: gatsby build
 
       - name: Archive the Build Folder i.e public folder
-        uses: actions/upload-artifacts@v2
+        uses: actions/upload-artifact@v2
         with:
           name: spacexpublicfolder
           path: ./public/
@@ -38,7 +38,7 @@ jobs:
     needs: build
     steps:
       - name: Download Spacex Application Public Folder
-        uses: action/download-artifact@v2
+        uses: actions/download-artifact@v2
         id: spacexfolderdownload
         with:
           name: spacexpublicfolder
