--- a/.github/workflows/spacexapp-workflow.yml
+++ b/.github/workflows/spacexapp-workflow.yml
@@ -16,6 +16,8 @@ jobs:
 
       - name: Install Gatsby Library
         run: npm install -g gatsby-cli
+      - name: Checkout the Code
+        uses: actions/checkout@v2
 
       - name: Checkout the Code
         uses: actions/checkout@v2
@@ -30,7 +32,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: spacexpublicfolder
-          path: ./public/
+          path: public
         if: always()
 
   deployment:
