--- a/.github/workflows/spacexapp-workflow.yml
+++ b/.github/workflows/spacexapp-workflow.yml
@@ -57,4 +57,4 @@ jobs:
         run: npm install -g surge
 
       - name: Deploying the Application using Surge
-        run: surge . ${{ secrets.SURGE_DOMAIN }} --token ${{ secrets.SURGE_TOKEN }} --login ${{ secrets.SURGE_LOGIN }}
+        run: surge . ${{ secrets.SURGE_DOMAIN }} --token ${{ secrets.SURGE_TOKEN }} ${{ secrets.SURGE_LOGIN }}
